# act_cmake

./: CMakeLists.txt  dynamic_load_client.cpp  generate_file_tree.bat  models.yaml
action_recognition/: action_recognition.cpp  action_recognition.hpp  falldetection_handle.cpp  falldetection_handle.h  falldetection_pipeline.cpp  falldetection_pipeline.hpp  main.cpp  one_euro_filter.cpp  one_euro_filter.hpp  test_falldetection_pipeline.cpp
bytetrack_opencv/: bytetrack.cpp  bytetrack.h  draw_utils.hpp  main.cpp
dependencies/include/: bm_wrapper.hpp  bmnn_utils.h  ff_decode.hpp  utils.hpp  yolov5.hpp
dependencies/src/: ff_decode.cpp  yolov5.cpp
hrnet_pose_bmcv/: hrnet_pose.cpp  hrnet_pose.hpp  main.cpp
yolov8_bmcv/: bm_wrapper.hpp  main.cpp  yolov8_det.cpp  yolov8_det.hpp
